add SQL server info

--- a/Donations/appsettings.json
+++ b/Donations/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Donations;User ID=sa;Password=Guwno1Guwno;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
